--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,12 @@
-# python_requires>=3.10
-
-geopandas>=0.14
+geopandas>=0.13
+pyproj>=3.4
 shapely>=2.0
-fiona>=1.9
 rasterio>=1.3
 rasterstats>=0.19
-pyproj>=3.6
-gdal>=3.8
-
-numpy>=1.23
-pandas>=2.0
-matplotlib>=3.8
-tqdm>=4.66
-
+folium>=0.14
+matplotlib>=3.7
+numpy>=1.24,<2.3
 requests>=2.31
 beautifulsoup4>=4.12
 filetype>=1.2
-ipython>=8.22
-
-
-
+tqdm>=4.66
